--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-1 inner">
                   <h1 class="animated fadeInDown">
-                    J<span style="color:#E04343;">o</span>hn<br/>
-                    <span>D<span style="color:#FFE800">o</span>e</span>
+                    M<span style="color:#E04343;">I</span>chael<br/>
+                    <span>A<span style="color:#FFE800">ff</span>are</span>
                   </h1><!-- Title -->
                   <h3 class="animated fadeInUp delay-05s"><span class="rotate">Software Engineer, Data Scientist</span></h3><!-- Text Rotator -->
                 </div>
