--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-1 inner">
                   <h1 class="animated fadeInDown">
-                    <span style="color:#E04343;">MIC</span>chael<br/>
+                    <span style="color:#E04343;">MIC</span>hael<br/>
                     <span><span style="color:#FFE800">A</span>ffare</span>
                   </h1><!-- Title -->
                   <h3 class="animated fadeInUp delay-05s"><span class="rotate">Software Engineer, Data Scientist</span></h3><!-- Text Rotator -->
