check out name tags

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <span style="color:#E04343;">MIC</span>hael<br/>
                     <span><span style="color:#FFE800">A</span>ffare</span>
                   </h1><!-- Title -->
-                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Software Engineer, Data Scientist</span></h3><!-- Text Rotator -->
+                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Software Engineer, Data Scientist, Writer, Artist, Researcher</span></h3><!-- Text Rotator -->
                 </div>
               </div>
 			  <!-- Learn More Button -->
