--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
 		    <!-- Headline -->
             <div class="row">
               <h1 class="arrow">
-                Recent <span>Porojects</span>
+                Recent <span>Portfolio</span>
               </h1>
             </div>
           </div>
