starting with homepage

--- a/portfolio/index_test.html
+++ b/portfolio/index_test.html
@@ -7,26 +7,26 @@
 	<!-- Website Title -->
     <title>Michael Affare - Professional software engineer and data scientist</title>
     <!-- Bootstrap -->
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Font-Awesome -->
-    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	<!-- Lightbox -->
-	<link href="assets/lightbox/css/lightbox.css" rel="stylesheet">
+	<link href="../assets/lightbox/css/lightbox.css" rel="stylesheet">
     <!-- Text Rotator-->
-	<link href="assets/textrotator/simpletextrotator.css" rel="stylesheet">
+	<link href="../assets/textrotator/simpletextrotator.css" rel="stylesheet">
 	<!-- FlexSlider -->
-    <link href="assets/flexslider/flexslider.css" rel="stylesheet">
+    <link href="../assets/flexslider/flexslider.css" rel="stylesheet">
 	<!-- Theme Style -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 	<!-- Animations -->
-    <link href="css/animate.css" rel="stylesheet">
+    <link href="../css/animate.css" rel="stylesheet">
 	<!-- Custom Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
+	<link href="../img/favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="assets/html5shiv/html5shiv.js"></script>
-    <script src="assets/respond/respond.min.js"></script>
+    <script src="../assets/html5shiv/html5shiv.js"></script>
+    <script src="../assets/respond/respond.min.js"></script>
     <![endif]-->
   </head>
     <body id="top">
@@ -46,12 +46,12 @@
 				<nav class="menu">
 				    <!-- Menu Links -->
 					<div class="icon-list">
-						<a href="index.html#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
-						<a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
-						<a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a>
-						<a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
-						<a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>
-						<a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
+						<a href="../index.html#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
+						<a href="../index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
+						<a href="../index.html#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a>
+						<a href="../index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
+						<a href="../index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>
+						<a href="../index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
 					</div>
 				</nav>
 			    </div>
@@ -64,7 +64,7 @@
 			  <!-- Slider Button (don't edit!)-->
               <div class="row">
                 <div class="col-md-12 text-right navicon">
-                  <a id="nav-toggle" class="nav_slide_button" href="index.html#"><span></span></a>
+                  <a id="nav-toggle" class="nav_slide_button" href="../index.html"><span></span></a>
                 </div>
               </div>
 			  <!-- HEADER HEADLINE -->
@@ -74,15 +74,15 @@
                     <span style="color:#E04343;">MIC</span>hael<br/>
                     <span><span style="color:#FFE800">A</span>ffare</span>
                   </h1><!-- Title -->
-                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Software Engineer, Data Scientist, Writer, Artist, Researcher</span></h3><!-- Text Rotator -->
+                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">CMU- MISM, Solutions Architect, Data Scientist</span></h3><!-- Text Rotator -->
                 </div>
               </div>
 			  <!-- Learn More Button -->
               <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                  <a href="index.html#about" class="scrollto wow fadeInUp delay-5s ">
+                  <a href="../index.html#about" class="scrollto wow fadeInUp delay-5s ">
 			            <p>SEE MORE</p>
-			            <p class="scrollto--arrow"><img src="img/scroll-down.png" alt="scroll down arrow"></p>
+			            <p class="scrollto--arrow"><img src="../img/scroll-down.png" alt="scroll down arrow"></p>
 			        </a>
                 </div>
               </div>
@@ -121,7 +121,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-01-large.jpg" data-lightbox="roadtrip" title="Project One - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-01-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="../img/portfolio/portfolio-01-large.jpg" data-lightbox="roadtrip" title="Project One - Lorem Ipsum"><img class="grayscale" src="../img/portfolio/portfolio-01-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -131,7 +131,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-02-large.jpg" data-lightbox="roadtrip" title="Project Two - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-02-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="../img/portfolio/portfolio-02-large.jpg" data-lightbox="roadtrip" title="Project Two - Lorem Ipsum"><img class="grayscale" src="../img/portfolio/portfolio-02-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -141,7 +141,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-03-large.jpg" data-lightbox="roadtrip" title="Project Three - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-03-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="../img/portfolio/portfolio-03-large.jpg" data-lightbox="roadtrip" title="Project Three - Lorem Ipsum"><img class="grayscale" src="../img/portfolio/portfolio-03-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -151,7 +151,7 @@
           <div class="col-md-3 col-sm-6 ">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-04-large.jpg" data-lightbox="roadtrip" title="Project Four - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-04-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="../img/portfolio/portfolio-04-large.jpg" data-lightbox="roadtrip" title="Project Four - Lorem Ipsum"><img class="grayscale" src="../img/portfolio/portfolio-04-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -161,7 +161,7 @@
           <div class="col-md-3 col-sm-6 ">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-05-large.jpg" data-lightbox="roadtrip" title="Project Five - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-05-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="../img/portfolio/portfolio-05-large.jpg" data-lightbox="roadtrip" title="Project Five - Lorem Ipsum"><img class="grayscale" src="../img/portfolio/portfolio-05-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -171,7 +171,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-06-large.jpg" data-lightbox="roadtrip" title="Project Six - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-06-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-06-large.jpg" data-lightbox="roadtrip" title="Project Six - Lorem Ipsum"><img class="grayscale" src="../img/portfolio/portfolio-06-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -181,7 +181,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-07-large.jpg" data-lightbox="roadtrip" title="Project Seven - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-07-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="../img/portfolio/portfolio-07-large.jpg" data-lightbox="roadtrip" title="Project Seven - Lorem Ipsum"><img class="grayscale" src="../img/portfolio/portfolio-07-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -191,7 +191,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-08-large.jpg" data-lightbox="roadtrip" title="Project Eight - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-08-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="../img/portfolio/portfolio-08-large.jpg" data-lightbox="roadtrip" title="Project Eight - Lorem Ipsum"><img class="grayscale" src="../img/portfolio/portfolio-08-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -244,7 +244,7 @@
                     <div class="col-md-4 wp4">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog1.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="../img/blog1.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
@@ -255,7 +255,7 @@
                     <div class="col-md-4 wp4 delay-05s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog2.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="../img/blog2.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
@@ -266,7 +266,7 @@
                     <div class="col-md-4 wp4 delay-1s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog3.jpg"  class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="../img/blog3.jpg"  class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
@@ -279,7 +279,7 @@
                     <div class="col-md-4 wp4">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog1.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="../img/blog1.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
@@ -301,7 +301,7 @@
                     <div class="col-md-4 wp4 delay-1s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog3.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="../img/blog3.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
@@ -358,7 +358,7 @@
 				<div class="row color-bg">
 				    <div class="col-md-6 nopadding subscribe text-center">
 					 <h1><i class="fa fa-paper-plane"></i><span>Subscribe our Newsletter</span></h1><!-- Heading -->
-                     <form action="index.html#">
+                     <form action="../index.html#">
                        <input type="text" name="" value="" placeholder="" required><!-- E-Mail -->
                        <input type="submit" name="" value="Send"><!-- Submit Button -->
                     </form>   
@@ -380,7 +380,7 @@
         =========================== -->
         <section class="text-center section-padding contact-wrap" id="contact">
 		  <!-- To Top Button -->
-          <a href="index.html#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
+          <a href="../index.html#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
           <div class="container">
 		    <!-- Headline -->
             <div class="row">
@@ -407,7 +407,7 @@
               <div class="col-md-4">
                 <div class="dark-box box-hover">
                   <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-                  <p><a href="index.html#">info@themewagon.com</a></p>
+                  <p><a href="../index.html#">info@themewagon.com</a></p>
                 </div>
               </div>
             </div>
@@ -450,11 +450,11 @@
             <div class="row">
               <div class="col-md-12">
                 <ul class="social-buttons">
-                  <li><a href="index.html#" class="social-btn"><i class="fa fa-dribbble"></i></a></li><!-- dribble -->
-                  <li><a href="index.html#" class="social-btn"><i class="fa fa-twitter"></i></a></li><!-- twitter -->
-                  <li><a href="index.html#" class="social-btn"><i class="fa fa-facebook"></i></a></li><!-- facebook -->
-				  <li><a href="index.html#" class="social-btn"><i class="fa fa-deviantart"></i></a></li><!-- deviantart -->
-				  <li><a href="index.html#" class="social-btn"><i class="fa fa-youtube"></i></a></li><!-- youtube -->
+                  <li><a href="../index.html#" class="social-btn"><i class="fa fa-dribbble"></i></a></li><!-- dribble -->
+                  <li><a href="../index.html#" class="social-btn"><i class="fa fa-twitter"></i></a></li><!-- twitter -->
+                  <li><a href="../index.html#" class="social-btn"><i class="fa fa-facebook"></i></a></li><!-- facebook -->
+				  <li><a href="../index.html#" class="social-btn"><i class="fa fa-deviantart"></i></a></li><!-- deviantart -->
+				  <li><a href="../index.html#" class="social-btn"><i class="fa fa-youtube"></i></a></li><!-- youtube -->
                 </ul>
               </div>
             </div>
@@ -486,26 +486,26 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- SmoothScroll -->           
-    <script type="text/javascript" src="assets/smoothscroll/smoothscroll.js"></script>
+    <script type="text/javascript" src="../assets/smoothscroll/smoothscroll.js"></script>
     <!-- Bootstrap -->
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 	<!-- Waypoints -->
-	<script src="js/waypoints.min.js"></script>
+	<script src="../js/waypoints.min.js"></script>
     <!-- classie.js -->
-	<script src="js/classie.js"></script>
+	<script src="../js/classie.js"></script>
     <!-- FlexSlider -->
-    <script src="assets/flexslider/jquery.flexslider.js"></script>
+    <script src="../assets/flexslider/jquery.flexslider.js"></script>
 	<!-- Modernizr -->
-    <script src="js/modernizr.js"></script>
+    <script src="../js/modernizr.js"></script>
 	<!-- Text Rotator -->
-	<script src="assets/textrotator/jquery.simple-text-rotator.js"></script>
+	<script src="../assets/textrotator/jquery.simple-text-rotator.js"></script>
 	<!-- Lightbox.js -->
-    <script src="assets/lightbox/js/lightbox.min.js"></script>
+    <script src="../assets/lightbox/js/lightbox.min.js"></script>
     <!-- Google Maps --> 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeKBBPJTG3v5w3cNPAgM6ZsJiPyL1mP_o&amp;sensor=false"></script>
 	<!-- Theme JavaScript Core -->
-	<script src="js/main.js"></script>
-	<script src="js/script.js"></script>
+	<script src="../js/main.js"></script>
+	<script src="../js/script.js"></script>
 
 	<!-- GOOGLE MAPS DATA -->
     <script type="text/javascript">
