clearing extra fields in portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -183,31 +183,6 @@
 
 
 
-
-		<br/><br/><br/>
-		<!-- ==========================
-        CUSTOM SPACER
-        =========================== -->
-        <div class="spacer-cta text-center">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12">
-                <a href="index.html#contact" class="outline-btn">Explore</a>
-              </div>
-            </div>
-          </div>
-        </div>
-		<!-- ==========================
-        CUSTOM SPACER END
-        =========================== -->
-        <br/><br/><br/>
-		
-
-
-
-
-
-
 	<br/><br/><br/>
 
 		
@@ -222,12 +197,12 @@
 				</div>
 				<!-- Clients / Testimonials -->
 				<div class="col-md-6 nopadding about-text">
-				<h6>What our clients said</h6>
+				<h6>Portfolio Highlights</h6>
 					<div id="clientSlider">
 					   <ul class="slides">
-					       <li><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <br>	<small>- Pete Rock, A New Tomorrow</small></p></li>
-						   <li><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <br>	<small>- Michael Snowden, Creativeland CEO</small></p></li>
-						  <li><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <br>	<small>- Tom Davis, GreenWonder</small></p>	</li>
+					       <li><p>Built a new portfolio page. <br>	<small>- Telling Stories with Data</small></p></li>
+						   <li><p>Assignment 1 colour. <br>	<small>- Telling Stories with Data</small></p></li>
+						  <li><p>Assignment 2 visualisation. <br>	<small>- Telling Stories with Data</small></p>	</li>
 					   </ul>
 					</div>
 				</div>
