--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,6 +48,7 @@
 					<div class="icon-list">
 						<a href="../index.html#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
 						<a href="../index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
+            <a href="../michaelaffare_resume.pdf"><i class="fa fa-fw fa-file"></i><span>Resume</span></a>
 						<a href="../index.html#service"><i class="fa fa-fw fa-globe"></i><span>Skills</span></a>
 						<a href="../index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
 						<a href="../index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Segments</span></a>
