--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -254,10 +254,13 @@
                   </div>
                 </div>
           <div class="row">
-            <!-- Google Maps (Change your Settings below) -->
+            
+            <!-- Google Maps (Change your Settings below) 
             <div class="col-md-6">
               <div id="googlemaps"></div>
             </div>
+          -->
+
             <!-- Contact Form -->
             <div class="col-md-6 contact">
                <form role="form">
