--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
             <div class="row">
               <div class="col-md-12">
                 <ul class="social-buttons">
-                  <li><a href="https://twitter.com/home" class="social-btn"><i class="fa fa-twitter"></i></a></li><!-- twitter -->
-                  <li><a href="https://www.facebook.com/" class="social-btn"><i class="fa fa-facebook"></i></a></li><!-- facebook -->
-				          <li><a href="https://www.instagram.com/" class="social-btn"><i class="fa fa-instagram"></i></a></li><!-- deviantart -->
+                  <li><a href="https://twitter.com/michaelaaffare" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.facebook.com/ambroseaffare/" class="social-btn"><i class="fa fa-facebook"></i></a></li>
+				          <li><a href="https://www.instagram.com/michaelaffare/" class="social-btn"><i class="fa fa-instagram"></i></a></li>
                   <li><a href="https://www.linkedin.com/in/michaelaffare/" class="social-btn"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
               </div>
