testing the templates in md

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 				    <!-- Menu Links -->
 					<div class="icon-list">
 						<a href="index.html#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
-						<a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
-            <a href="../michaelaffare_resume.pdf"><i class="fa fa-fw fa-file"></i><span>Resume</span></a>
+						<a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About me</span></a>
+            <a href="../michaelaffare_resume.pdf"><i class="fa fa-fw fa-file" target="_blank"></i><span>Resume</span></a>
 						<a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Skills</span></a>
 						<a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
 						<a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Segments</span></a>
@@ -115,7 +115,7 @@
 		    <!-- WELCOME TEXT -->
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
-                <h1 class="arrow"><span>About</span> Michael</h1><!-- Headline -->
+                <h1 class="arrow"><span>About</span> me</h1><!-- Headline -->
 			  <!-- about / welcome text -->
                 <p> <a href="https://www.linkedin.com/in/michaelaffare/" target="_blank">Michael Affare</a> is a Master of Information Systems Management graduate student at Carnegie Mellon University. I have 4 years work experience as a Solutions Architect at AirtelTigo Telecommunications Company. I worked briefly in Australia as an Application Support Analyst at Freshtrack Systems and interned at Hubble.sh as a Data Scientist.</p>
               </div>
@@ -338,7 +338,7 @@
 		
 		
 	
-		
+
 		
 		<!-- ==========================
         CONTACT SECTION
