testing portfolio page

--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@
             <div class="row">
               <div class="col-md-12">
                 <ul class="social-buttons">
-                  <li><a href="https://twitter.com/michaelaaffare" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="https://www.facebook.com/ambroseaffare/" class="social-btn"><i class="fa fa-facebook"></i></a></li>
-				          <li><a href="https://www.instagram.com/michaelaffare/" class="social-btn"><i class="fa fa-instagram"></i></a></li>
-                  <li><a href="https://www.linkedin.com/in/michaelaffare/" class="social-btn"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="https://twitter.com/home" class="social-btn" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.facebook.com/" class="social-btn" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://www.instagram.com/" class="social-btn"  target="_blank"><i class="fa fa-instagram"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/michaelaffare/" class="social-btn" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
               </div>
             </div>
