contact form removed

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -261,35 +261,37 @@
             </div>
           -->
 
-            <!-- Contact Form -->
-            <div class="col-md-6 contact">
-               <form role="form">
-                        <!-- Name -->
-                                <div class="row">
-                                    <div class="col-md-6">
-                        <!-- E-Mail -->
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Your name">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                        <!-- Phone Number -->
-                                        <div class="form-group">
-                                            <input type="email" class="form-control" placeholder="Email address">
-                                        </div>
+             <!-- Contact Form 
+			  <div class="col-md-6 contact">
+			     <form role="form">
+				            <-- Name --
+                            <div class="row">
+                                <div class="col-md-6">
+								    <-- E-Mail --
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Your name">
                                     </div>
                                 </div>
-                  <!-- Message Area -->
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Write you message here..." style="height:232px;"></textarea>
+                                <div class="col-md-6">
+								    <-- Phone Number --
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Email address">
+                                    </div>
                                 </div>
-                  <!-- Subtmit Button -->
-                                <button type="submit" class="btn btn-send">
-                                    Send message
-                                </button>
-                            </form>
-            </div>
-          </div>
+                            </div>
+							<-- Message Area --
+                            <div class="form-group">
+                                <textarea class="form-control" placeholder="Write you message here..." style="height:232px;"></textarea>
+                            </div>
+							<-- Subtmit Button --
+                            <button type="submit" class="btn btn-send">
+                                Send message
+                            </button>
+                        </form>
+
+			  </div> -->
+
+        
           <br>
           <!-- Social Buttons - use font-awesome, past in what you want -->
                 <div class="row">
