--- a/index.html
+++ b/index.html
@@ -383,34 +383,35 @@
 			    <div id="googlemaps"></div>
 			  </div>
       -->
-			  <!-- Contact Form -->
+			  <!-- Contact Form 
 			  <div class="col-md-6 contact">
 			     <form role="form">
-				            <!-- Name -->
+				            <-- Name --
                             <div class="row">
                                 <div class="col-md-6">
-								    <!-- E-Mail -->
+								    <-- E-Mail --
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="Your name">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-								    <!-- Phone Number -->
+								    <-- Phone Number --
                                     <div class="form-group">
                                         <input type="email" class="form-control" placeholder="Email address">
                                     </div>
                                 </div>
                             </div>
-							<!-- Message Area -->
+							<-- Message Area -->
                             <div class="form-group">
                                 <textarea class="form-control" placeholder="Write you message here..." style="height:232px;"></textarea>
                             </div>
-							<!-- Subtmit Button -->
+							<!-- Subtmit Button --
                             <button type="submit" class="btn btn-send">
                                 Send message
                             </button>
                         </form>
-			  </div>
+
+			  </div> -->
 			</div>
 			<br>
 			<!-- Social Buttons - use font-awesome, past in what you want -->
@@ -439,7 +440,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center">
-                <p>All Rights Reserved. &copy; 2015 <a href="http://www.themewagon.com">ThemeWagon</a>
+                <p>All Rights Reserved. &copy; 2015 <a href="http://www.themewagon.com" target="_blank">ThemeWagon</a>
               </div>
             </div>
           </div>
