portfolio link fixed on home page

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </div>
           <!-- Blog Entry 3 -->
                     <div class="col-md-4 wp4 delay-1s">
-                      <a href="tswd/" target="_blank">
+                      <a href="portfolio/tswd/" target="_blank">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
                           <img src="img/blog3.jpg"  class="grayscale" alt="Blog Item"><!-- Blog Image -->
@@ -383,6 +383,7 @@
 			    <div id="googlemaps"></div>
 			  </div>
       -->
+
 			  <!-- Contact Form 
 			  <div class="col-md-6 contact">
 			     <form role="form">
@@ -401,11 +402,11 @@
                                     </div>
                                 </div>
                             </div>
-							<-- Message Area -->
+							<-- Message Area --
                             <div class="form-group">
                                 <textarea class="form-control" placeholder="Write you message here..." style="height:232px;"></textarea>
                             </div>
-							<!-- Subtmit Button --
+							<-- Subtmit Button --
                             <button type="submit" class="btn btn-send">
                                 Send message
                             </button>
