fixed resume on blank tab

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div class="icon-list">
 						<a href="index.html#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
 						<a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About me</span></a>
-            <a href="../michaelaffare_resume.pdf"><i class="fa fa-fw fa-file" target="_blank"></i><span>Resume</span></a>
+            <a href="../michaelaffare_resume.pdf" target="_blank"><i class="fa fa-fw fa-file"></i><span>Resume</span></a>
 						<a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Skills</span></a>
 						<a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
 						<a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Segments</span></a>
@@ -403,9 +403,7 @@
                                 </div>
                             </div>
 							<-- Message Area --
-                            <div class="form-group">
-                                <textarea class="form-control" placeholder="Write you message here..." style="height:232px;"></textarea>
-                            </div>
+                   
 							<-- Subtmit Button --
                             <button type="submit" class="btn btn-send">
                                 Send message
