blog tag updated to right location

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -89,7 +89,7 @@
     <!-- ==========================
         BLOG SECTION 
         =========================== -->
-    <section class="text-center " id="blog">
+    <section class="text-center " id="portfolio">
       <div class="container">
     <!-- Headline -->
     <div class="row">
