--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <!-- ==========================
         BLOG SECTION 
         =========================== -->
-        <section class="text-center " id="blog">
+        <section class="text-center " id="portfolio">
           <div class="container">
         <!-- Headline -->
         <div class="row">
