redirect blog to blog pages

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 				<div class="col-md-6 about-text">
 					<h6>Solutions Design</h6><!-- headline-->
 					<p>Much of the work I did as a Solution Architect was to organize information and design a solution that can be communicated to technical people for implmenetation and business people (for usage).</p><br><!-- About Text 1 -->
-					<a href="index.html#team" class="weight-outline-btn">Read more</a><!-- read more button  -->			
+					<a href="portfolio/tswd/blog/solution-design.md" class="weight-outline-btn">Read more</a><!-- read more button  -->			
 				</div>
 			</div>
 			<!-- About 2 -->
@@ -317,7 +317,7 @@
 				<div class="col-md-6 about-text">
 					<h6>Presentation and Documentation</h6><!-- Headline -->
 					<p>Much of the work relied on good presentation and documentation; business stakeholders did not care the algorithm we used or the complexity we surmounted; they just wanted to see how it works and what value it brings. Presentation therefore was crucial.</p><br><!-- About Text 2 -->
-					<a href="index.html#team" class="weight-outline-btn">Read more</a>	<!-- read more button  -->				
+					<a href="portfolio/tswd/blog/presentation-and-documentation.md" class="weight-outline-btn">Read more</a>	<!-- read more button  -->				
 				</div>
 				<div class="col-md-6 nopadding features-intro-img">
 					<div class="about-image" style="background-image:url(img/about2.png)"></div><!-- about image 2 -->
@@ -331,7 +331,7 @@
 				<div class="col-md-6 about-text">
 					<h6>Simplicity</h6><!-- Headline-->
 					<p>Everyone in industry values simplicity; over the years I grew to value keeping things simple as it made everyone's work easier, Service oriented architecture and modular approach to handling problems was adopted more and more.</p><br><!-- About Text 3 -->
-					<a href="index.html#team" class="weight-outline-btn">Read more</a><!-- read more button  -->					
+					<a href="portfolio/tswd/blog/simplicity.md" class="weight-outline-btn">Read more</a><!-- read more button  -->					
 				</div>
 			</div>
 		</div>
