--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<a href="index.html#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
 						<a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About me</span></a>
             <a href="../michaelaffare_resume.pdf" target="_blank"><i class="fa fa-fw fa-file"></i><span>Resume</span></a>
-            <a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
+            <a href="portfolio/index.html"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
 						<a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Skills</span></a>
 						<a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>
 						<a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
