--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
                 <h1 class="arrow"><span>About</span> me</h1><!-- Headline -->
 			  <!-- about / welcome text -->
                 <p> <a href="https://www.linkedin.com/in/michaelaffare/" target="_blank">Michael Affare</a> is a Master of Information Systems Management graduate student at Carnegie Mellon University. I have 4 years work experience as a Solutions Architect at AirtelTigo Telecommunications Company. I worked briefly in Australia as an Application Support Analyst at Freshtrack Systems and interned at Hubble.sh as a Data Scientist.</p>
+                <br/>
+                <p> As a solutions architect it was critical to use visualisations to simplify business data and use diagrams to communicate the solution being propose. Frequently I found that the perception the business stakeholders get about the solution is influenced by the visualizations that are displayed to them. I improved my presentations however I did not have any formal training on visualisation and design concepts or tools.</p>
+                <br/>
+                <p>This is why the course Telling Stories with Data is so relevant to me. I am an aspiring data scientist and the most important part of data science is the ability to effectively communicate insights into data. I look forward to a honing of my presentation skills through effective visualisations.</p>
               </div>
             </div>
           </div>
