making the text shine

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <span style="color:#E04343;">MIC</span>hael<br/>
                     <span><span style="color:#FFE800">A</span>ffare</span>
                   </h1><!-- Title -->
-                  <h3 class="animated fadeInUp delay-05s"><span class="rotate" style="color:#E04343 !important; font-weight: bold;">CMU- MISM, Solutions Architect, Data Scientist</span></h3><!-- Text Rotator -->
+                  <h3 class="animated fadeInUp delay-05s"><span class="rotate" style="color:#E04343 !important; font-weight: bold !important; text-shadow: 2px 2px #ffffff !important;">CMU- MISM, Solutions Architect, Data Scientist</span></h3><!-- Text Rotator -->
                 </div>
               </div>
 			  <!-- Learn More Button -->
