testing shadow on SEE MORE

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                   <a href="index.html#about" class="scrollto wow fadeInUp delay-5s ">
-			            <p style="color:#ffffff !important; font-weight: bold !important; text-shadow: 1px 1px #000000 !important;">SEE MORE</p>
+			            <p style="color:#ffffff !important; font-weight: bold !important; text-shadow: 0.5px 0.5px 0.5px 0.5px #000000 !important;">SEE MORE</p>
 			            <p class="scrollto--arrow"><img src="img/scroll-down.png" alt="scroll down arrow"></p>
 			        </a>
                 </div>
